--- a/src/css/particles/_reset.scss
+++ b/src/css/particles/_reset.scss
@@ -66,7 +66,7 @@ td {
     font-size: 100%;
     font-family: inherit;
     vertical-align: baseline;
-
+    font-family: PingFangSC-Regular,Hiragino Sans GB,sans-serif;
 }
   
 *{
